# Flowforge

./: .gitignore  .pre-commit-config.yaml  Application plan.md  Makefile  README.md  Tiltfile  agents.md  open-issues.md  planning.md
backend/: Dockerfile  agents.md  alembic.ini  pyproject.toml
backend/alembic/: agents.md  env.py
backend/alembic/versions/: 52fd1e8282e7_add_executions_table.py  92284ff9b280_initial_schema.py  add_audit_action_export_import.py  add_audit_logs_table.py  add_widget_auto_refresh_interval.py  d8a1b2c3d4e5_add_fk_indexes_and_tenant_email.py  e9f2a3b4c5d6_schema_cleanup_batch2.py
backend/app/: main.py
backend/app/api/: agents.md  deps.py
backend/app/core/: agents.md  auth.py  clickhouse.py  config.py  database.py  graph.py  logging_config.py  materialize.py  metrics.py  middleware.py  redis.py
backend/app/models/: __init__.py  agents.md  audit_log.py  dashboard.py  execution.py  user.py  workflow.py
backend/app/schemas/: agents.md  audit.py  dashboard.py  preview.py  query.py  schema.py  template.py  workflow.py
backend/app/services/: agents.md  audit_service.py  base_query_service.py  formula_parser.py  live_data_service.py  preview_service.py  query_router.py  rate_limiter.py  schema_engine.py  schema_registry.py  template_registry.py  websocket_manager.py  widget_data_service.py  workflow_compiler.py
backend/scripts/: seed_dev.py
backend/tests/: agents.md  conftest.py  test_logging_config.py  test_metrics.py
backend/tests/api/: test_api_keys_endpoint.py  test_cross_tenant_security.py  test_dashboard_widgets_endpoint.py  test_embed_auth.py  test_execution_cancel.py  test_execution_history.py  test_health.py  test_rbac.py  test_role_access.py  test_templates_endpoint.py  test_websocket_endpoint.py  test_workflow_export_import.py  test_workflows.py
backend/tests/integration/: __init__.py  test_clickhouse_e2e.py  test_materialize_e2e.py
backend/tests/services/: test_audit_service.py  test_formula_parser.py  test_live_data_subscribe.py  test_preview_cache_invalidation.py  test_preview_service.py  (+10 more)
(+321 files in other folders)
